--- a/src/main/webapp/pdf_region_extractor/pdf_region_text_extractor_tool.xhtml
+++ b/src/main/webapp/pdf_region_extractor/pdf_region_text_extractor_tool.xhtml
@@ -54,7 +54,7 @@
             </f:metadata>
             <p:panel>
                 <ui:include src="/WEB-INF/includes/header.xhtml"/>
-                <h1>#{text['pdfmatcher.tool.tagline']}</h1>
+                <h1>#{text['pdfmatcher.tool.title']}</h1>
             </p:panel>
             <div>
                 <p:spacer height="20" width="10"/>            
