fixed bug on results of umigon and also fixed incorrect sizing of results in umigon and organic

--- a/src/main/webapp/umigon/results.xhtml
+++ b/src/main/webapp/umigon/results.xhtml
@@ -105,7 +105,7 @@
                                                oncomplete="PF('resultsTableWidgetVar').filter()"/>
                                 <div style="background-color: #F0F0F0;">
                                     <p:outputLabel 
-                                        value="#{doc.explanationSentimentHtml}" 
+                                        value="#{doc.explanationHtml}" 
                                         rendered ="#{doc.showExplanation}" 
                                         escape="false"
                                         style="font-size: 80%"
