added css style to fix youtube video resizing

--- a/src/main/webapp/pdf_region_extractor/pdf_region_text_extractor_tool.xhtml
+++ b/src/main/webapp/pdf_region_extractor/pdf_region_text_extractor_tool.xhtml
@@ -62,6 +62,22 @@
             <div class="grid" >
                 <div class="col-12 md:9 lg:col-9">
                     <p:panel>
+                        <p:outputLabel value="#{text['pdfregionextractor.tool.description.video_tutorial']}" escape="false"/>
+                        <br/>
+                        <br/>
+                        <div id="reduce-desktop" style="text-align:center;">
+                            <iframe
+                                width="560"
+                                height="315"
+                                style="max-width:100%"
+                                src="https://www.youtube-nocookie.com/embed/3sHn7sj3M6M"
+                                title="YouTube video player"
+                                frameborder="0"
+                                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                                />
+                        </div>
+                        <br/>
+                        <br/>
                         <p:outputLabel value="#{text['pdfregionextractor.tool.description_long_1']}" escape="false"/>
                         <br/>
                         <br/>
