additional cleaning, leading to an app size < 10 Mb

--- a/src/main/webapp/bibliocoupling/bibliographic_coupling_tool.xhtml
+++ b/src/main/webapp/bibliocoupling/bibliographic_coupling_tool.xhtml
@@ -6,7 +6,7 @@
     xmlns:f="jakarta.faces.core"
     xmlns:p="http://primefaces.org/ui"
     xmlns:ui="http://xmlns.jcp.org/jsf/facelets">
-    <f:view locale="#{activeLocale.current}">
+    <f:view locale="#{activeLocale.currentLocale}">
 
         <h:head>        <!-- Primary Meta Tags -->
             <title>#{text['bibliocoupling.title']}</title>
