--- a/src/main/webapp/highlighter/highlight_word_in_context.xhtml
+++ b/src/main/webapp/highlighter/highlight_word_in_context.xhtml
@@ -5,7 +5,7 @@
     xmlns:f="jakarta.faces.core"
     xmlns:p="http://primefaces.org/ui"
     xmlns:ui="http://xmlns.jcp.org/jsf/facelets">
-    <f:view locale="#{activeLocale.current}">
+    <f:view locale="#{activeLocale.currentLocale}">
 
         <h:head>        <!-- Primary Meta Tags -->
             <title>#{text['highlighter.tool.title']}</title>
