--- a/src/main/webapp/import/import_your_data_network_builder_option_2.xhtml
+++ b/src/main/webapp/import/import_your_data_network_builder_option_2.xhtml
@@ -6,7 +6,7 @@
     xmlns:p="http://primefaces.org/ui"
     xmlns:o="http://omnifaces.org/ui"
     xmlns:ui="http://xmlns.jcp.org/jsf/facelets">
-    <f:view locale="#{activeLocale.current}">
+    <f:view locale="#{activeLocale.currentLocale}">
 
         <h:head>
             <!-- Primary Meta Tags -->
