--- a/src/main/webapp/index.xhtml
+++ b/src/main/webapp/index.xhtml
@@ -5,7 +5,7 @@
     xmlns:f="jakarta.faces.core"
     xmlns:p="http://primefaces.org/ui"
     xmlns:ui="http://xmlns.jcp.org/jsf/facelets">
-    <f:view locale="#{activeLocale.current}">
+    <f:view locale="#{activeLocale.currentLocale}">
         <h:head>
             <!-- Primary Meta Tags -->
             <title>#{text['index.title']}</title>
@@ -484,10 +484,12 @@
                 </p:fieldset>
                 <p:spacer height="20"/>
                 <p:fieldset legend="#{text['header.menu.acknowledgements']}">
-                    <p:commandLink
-                        style="text-align: center;font-size: 80%"
-                        value="#{text['index.acknowledgements.details']}"
-                        action="acknowledgements.html?faces-redirect=true"/>
+                    <h:form>
+                        <p:commandLink
+                            style="text-align: center;font-size: 80%"
+                            value="#{text['index.acknowledgements.details']}"
+                            action="acknowledgements.html?faces-redirect=true"/>
+                    </h:form>
                 </p:fieldset>
             </p:panel>
             <ui:include src="/WEB-INF/includes/footer.xhtml" />
