--- a/src/main/webapp/topics/topics.xhtml
+++ b/src/main/webapp/topics/topics.xhtml
@@ -6,7 +6,7 @@
     xmlns:o="http://omnifaces.org/ui"
     xmlns:p="http://primefaces.org/ui"
     xmlns:ui="http://xmlns.jcp.org/jsf/facelets">
-    <f:view locale="#{activeLocale.current}">
+    <f:view locale="#{activeLocale.currentLocale}">
 
         <h:head>
             <link rel="apple-touch-icon" sizes="180x180" href="#{resource['images/favicons/apple-touch-icon.png']}"/>
@@ -50,7 +50,7 @@
                             <p:selectOneListbox id="lang" value="#{topicsBean.selectedLanguage}" style="width: 50px !important">
                                 <f:selectItems value="#{topicsBean.available}" var="l"
                                                itemValue="#{l.toLanguageTag()}"
-                                               itemLabel="#{l.getDisplayLanguage(activeLocale.current)}">
+                                               itemLabel="#{l.getDisplayLanguage(activeLocale.currentLocale)}">
                                 </f:selectItems>
                                 <p:ajax event="change" process="@this"/>
                             </p:selectOneListbox>
